--- a/Web-Micro-Services/p25.md
+++ b/Web-Micro-Services/p25.md
@@ -1,1 +1,230 @@
+# Chapter 25: Unit Tests Using Pytest
+
+(Simple examples + Codex-generated tests)
+
+---
+
+## Introduction
+
+In any backend system, testing is like checking your restaurant’s kitchen before serving food.
+You want to be sure:
+
+* The ingredients are fresh
+* The cooking process works
+* The final dish is correct
+
+In software, **unit tests** help you check whether small pieces of your code (functions, API routes, services) are working correctly.
+
+**Pytest** is a very simple and popular testing tool in Python.
+It lets you write tiny test functions that verify your code behaves the way you expect.
+
+---
+
+## Concepts
+
+* **Unit Test**: Testing one small part of the system (like checking if a billing function calculates correctly).
+* **Test Function**: A normal Python function that begins with `test_`.
+* **assert**: A simple check; similar to saying “this should be true.”
+* **Test Folder**: Usually named `tests/`.
+* **Mocking** (basic idea): Faking a part of the system so you can test another part safely.
+
+---
+
+## Step-by-step Explanation
+
+### Step 1: Install pytest
+
+```bash
+pip install pytest
+```
+
+### Step 2: Create a folder named `tests`
+
+```
+your_project/
+    app/
+    tests/
+        test_example.py
+```
+
+### Step 3: Write a very simple test
+
+A test function must start with `test_`.
+
+### Step 4: Run the tests
+
+```bash
+pytest
+```
+
+### Step 5: Read the result
+
+Pytest will show:
+
+* ✔ if the test passed
+* ✖ if the test failed
+* A small explanation of what failed
+
+---
+
+## Code Examples
+
+### Example 1: Testing a simple function
+
+Let’s say you have a function that adds two numbers:
+
+**app/utils/math_ops.py**
+
+```python
+def add(a, b):
+    return a + b
+```
+
+**tests/test_math_ops.py**
+
+```python
+from app.utils.math_ops import add
+
+def test_add():
+    result = add(2, 3)
+    assert result == 5
+```
+
+### Example 2: Testing FastAPI API using TestClient
+
+**app/main.py**
+
+```python
+from fastapi import FastAPI
+
+app = FastAPI()
+
+@app.get("/hello")
+def hello():
+    return {"message": "Hello"}
+```
+
+**tests/test_hello.py**
+
+```python
+from fastapi.testclient import TestClient
+from app.main import app
+
+client = TestClient(app)
+
+def test_hello():
+    res = client.get("/hello")
+    assert res.status_code == 200
+    assert res.json() == {"message": "Hello"}
+```
+
+### Example 3: Testing a database function with a fake value
+
+This is a simple example showing how to avoid real database calls:
+
+```python
+def get_user_name(user_id):
+    fake_db = {1: "Santanu"}
+    return fake_db.get(user_id, "Unknown")
+```
+
+Test:
+
+```python
+def test_get_user_name():
+    assert get_user_name(1) == "Santanu"
+    assert get_user_name(99) == "Unknown"
+```
+
+---
+
+## How Codex Helps
+
+Codex can make writing tests extremely easy.
+
+### 1. Generate basic test structure
+
+You can tell Codex:
+
+> “Write pytest tests for the following Python file.”
+
+Codex will generate:
+
+* Test folder
+* Test filenames
+* Test functions
+
+### 2. Create full API test suite
+
+You can say:
+
+> “Codex, write pytest API tests for all endpoints in `main.py`.”
+
+It will create:
+
+* TestClient setup
+* Tests for GET, POST, DELETE
+* JSON comparisons
+
+### 3. Generate missing tests
+
+If something fails or you add a new feature, just ask:
+
+> “Codex, add new unit tests for the new update_user() function.”
+
+### 4. Improve existing tests
+
+You can ask:
+
+> “Codex, refactor my tests to make them cleaner.”
+
+Codex will:
+
+* Remove duplicate code
+* Group similar tests
+* Add fixtures
+
+### 5. Debug failed tests
+
+If a test fails, just paste the error and say:
+
+> “Codex, explain this pytest failure and fix the code.”
+
+Codex will tell you:
+
+* What went wrong
+* What part of your code caused it
+* The corrected version
+
+---
+
+## Small Exercise
+
+### Task
+
+1. Create a function:
+
+   ```python
+   def multiply(a, b):
+       return a * b
+   ```
+2. Write a pytest test for it in the `tests/` folder.
+3. Ask Codex to:
+
+   * Generate two more tests
+   * Add edge case tests (like negative numbers)
+   * Improve your test file formatting
+
+### Hint
+
+Your test file should look something like:
+
+```python
+from app.utils.math_ops import multiply
+
+def test_multiply():
+    assert multiply(4, 5) == 20
+```
+
+---
 
