--- a/Web-Micro-Services/p26.md
+++ b/Web-Micro-Services/p26.md
@@ -1,1 +1,260 @@
+# Chapter 26: API Documentation
+
+(Using OpenAPI / Swagger UI + Simple Comments + Auto-Docs with Codex)
+
+---
+
+## Introduction
+
+Documentation is like giving a clear menu to customers in a restaurant.
+
+If your API is the *kitchen*, the documentation is the *menu* that tells others:
+
+* What dishes (endpoints) you offer
+* What ingredients (inputs) you expect
+* What you serve back (responses)
+
+FastAPI makes documentation extremely easy because it automatically creates **OpenAPI documentation** and a **Swagger UI** that anyone can read and test with just a browser.
+
+---
+
+## Concepts
+
+### **OpenAPI**
+
+A standard way of explaining:
+
+* What endpoints your API has
+* What inputs and outputs each endpoint accepts
+* Error responses
+
+### **Swagger UI**
+
+A friendly web page where you can:
+
+* See all API routes
+* Test them by sending real requests
+* View example inputs/outputs
+
+### **Docstrings / Comments**
+
+Simple text inside functions that describes:
+
+* What the function does
+* What parameters it expects
+* What it returns
+
+### **Codex Auto-Documentation**
+
+Codex can read your code and automatically:
+
+* Write docstrings
+* Explain endpoints
+* Generate Markdown API docs
+* Summarize your entire backend
+
+---
+
+## Step-by-step Explanation
+
+### **Step 1: FastAPI already gives you docs**
+
+Just run your FastAPI app:
+
+```bash
+uvicorn app.main:app --reload
+```
+
+Then open:
+
+* **Swagger UI** → `http://127.0.0.1:8000/docs`
+* **Redoc UI** → `http://127.0.0.1:8000/redoc`
+
+### **Step 2: Add simple descriptions**
+
+FastAPI lets you add descriptions easily:
+
+```python
+@app.get("/items", summary="Get all items", description="Returns a list of all available items in the shop.")
+```
+
+### **Step 3: Add docstrings**
+
+Add a short explanation inside the function:
+
+```python
+def get_items():
+    """
+    This function returns all available items.
+    Used by the shop dashboard.
+    """
+    return items_list
+```
+
+Swagger UI will show this automatically.
+
+### **Step 4: Add request/response models**
+
+Using Pydantic models makes your docs cleaner:
+
+```python
+from pydantic import BaseModel
+
+class Item(BaseModel):
+    id: int
+    name: str
+    price: float
+```
+
+Now your API route:
+
+```python
+@app.post("/items", response_model=Item)
+def create_item(item: Item):
+    return item
+```
+
+Swagger UI will show:
+
+* Fields
+* Types
+* Example JSON
+
+### **Step 5: Add tags to group endpoints**
+
+Like grouping foods in a restaurant menu:
+
+```python
+@app.get("/orders", tags=["Orders"])
+@app.get("/items", tags=["Items"])
+```
+
+---
+
+## Code Examples
+
+### Example 1: A simple documented GET API
+
+```python
+from fastapi import FastAPI
+
+app = FastAPI()
+
+@app.get(
+    "/hello",
+    summary="Say Hello",
+    description="This endpoint returns a simple greeting message."
+)
+def hello():
+    """Returns a greeting."""
+    return {"message": "Hello!"}
+```
+
+### Example 2: POST API with models and examples
+
+```python
+from pydantic import BaseModel
+
+class User(BaseModel):
+    name: str
+    age: int
+
+@app.post(
+    "/users",
+    response_model=User,
+    summary="Create a new user",
+    description="Takes a user's name and age and returns the created user."
+)
+def create_user(user: User):
+    """Creates a new user and returns it."""
+    return user
+```
+
+Swagger UI will automatically show:
+
+* Input model
+* Output model
+* Example JSON
+* Descriptions
+
+---
+
+## How Codex Helps
+
+Codex can save huge amounts of time when writing documentation.
+
+### **1. Generate docstrings**
+
+You can ask:
+
+> “Add detailed docstrings to this Python file.”
+
+Codex will produce:
+
+* Function summaries
+* Parameter explanations
+* Return descriptions
+
+### **2. Generate Markdown API documentation**
+
+Ask:
+
+> “Codex, create a README explaining all FastAPI endpoints.”
+
+It will produce a Markdown table like:
+
+| Method | Endpoint | Description    |
+| ------ | -------- | -------------- |
+| GET    | /items   | Get all items  |
+| POST   | /items   | Create an item |
+
+### **3. Improve existing docs**
+
+You can paste your entire file and say:
+
+> “Rewrite all descriptions in simple language.”
+
+### **4. Generate OpenAPI schema**
+
+Codex can generate:
+
+* JSON schema
+* Example requests/responses
+* Error documentation
+
+### **5. Create sample client code**
+
+Ask:
+
+> “Generate Python/JavaScript client code for all endpoints.”
+
+Codex will generate full API client wrappers.
+
+---
+
+## Small Exercise
+
+### Task
+
+1. Create a simple FastAPI project with two endpoints:
+
+   * GET `/status` → returns system status
+   * POST `/login` → takes username & password
+
+2. Add:
+
+   * summary
+   * description
+   * docstrings
+   * a Pydantic model for login
+
+3. Open Swagger UI and verify the documentation.
+
+4. Ask Codex:
+
+   * “Generate improved docstrings for my API.”
+   * “Write a simple README explaining my two endpoints.”
+   * “Generate an example curl command for each endpoint.”
+
+---
 
